--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@oovui/react-feather-icons": "^0.1.1",
     "autoprefixer": "^10.4.19",
     "classnames": "^2.5.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather-icons": "^0.0.1",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "tailwindcss": "^3.4.3",
     "use-debounce": "^10.0.0"
